@@ -1,5 +1,13 @@
 2008-09-29  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
+	* src/murrine_draw.c (murrine_draw_button),
+	(murrine_draw_scrollbar_stepper):
+	* src/murrine_draw_rgba.c (murrine_rgba_draw_button),
+	(murrine_rgba_draw_scrollbar_stepper):
+	Fixes in button's corners
+
+2008-09-29  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
 	* src/cairo-support.c (murrine_draw_glaze):
 	* src/cairo-support.h:
 	* src/murrine_draw.c (murrine_draw_button),
